<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.michelecucci.foodguru.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_qr"
        android:name="com.michelecucci.foodguru.ui.CameraFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_qr" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.michelecucci.foodguru.ui.SettingsFragment"
        android:label="@string/title_settings" />
</navigation>